fixed align

--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,5 @@ body {
 	margin: 0;
 	background: black;
 	color: red;
-	text-align 
+	text-align: center; 
 }
